sources/template-service/a-service/a-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: a-deployment
  namespace: template-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: a
  template:
    metadata:
      name: a-pod
      labels:
        app: a
    spec:
      containers:
      - name: a-container
        image: bersanid/template:0.1
        ports:
        - containerPort: 8080
