sources/template-service/a-service/a-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: a-svc
  namespace: template-ns
spec:
  type: ClusterIP
  selector:
    app: a
  ports:
    - port: 8080
      targetPort: 8080
#      nodePort: 30001
